--- a/src/ListenTogether/Resources/Styles/Colors.xaml
+++ b/src/ListenTogether/Resources/Styles/Colors.xaml
@@ -9,7 +9,7 @@
     <Color x:Key="LightLogo">#C98FFF</Color>
     <Color x:Key="LightFlyoutBackgroundColor">#FFFFFF</Color>
     <Color x:Key="LightBackground">#F7F7F7</Color>
-    <Color x:Key="LightListLine">#EDEDED</Color>
+    <Color x:Key="LightListLine">#FAFAFA</Color>
     <Color x:Key="LightTitle">#262626</Color>
     <Color x:Key="LightText">#262626</Color>
     <Color x:Key="LightTextSecond">#717171</Color>
@@ -30,11 +30,12 @@
     <Color x:Key="LightSwitchThumbOnColor">#C98FFF</Color>
     <Color x:Key="LightSwitchThumbOffColor">#605E5C</Color>
     <Color x:Key="LightGroupBackgroundColor">#F0F0F0</Color>
+    <Color x:Key="LightRowEnterColor">#F1F2F3</Color>
 
     <Color x:Key="DarkLogo">#C98FFF</Color>
     <Color x:Key="DarkFlyoutBackgroundColor">#3B3B3B</Color>
     <Color x:Key="DarkBackground">#333333</Color>
-    <Color x:Key="DarkListLine">#333333</Color>
+    <Color x:Key="DarkListLine">#2F2F2F</Color>
     <Color x:Key="DarkTitle">#FCF2F7</Color>
     <Color x:Key="DarkText">#FCF2F7</Color>
     <Color x:Key="DarkTextSecond">#9D9D9D</Color>
@@ -55,6 +56,7 @@
     <Color x:Key="DarkSwitchThumbOnColor">#C98FFF</Color>
     <Color x:Key="DarkSwitchThumbOffColor">#605E5C</Color>
     <Color x:Key="DarkGroupBackgroundColor">#605E5C</Color>
+    <Color x:Key="DarkRowEnterColor">#373737</Color>
 
     <Color x:Key="PlayingPageLine">#767676</Color>
     <Color x:Key="PlayingPageBackgroundColor">#333333</Color>
