--- a/src/ListenTogether/Pages/MyFavoritePage.xaml
+++ b/src/ListenTogether/Pages/MyFavoritePage.xaml
@@ -47,7 +47,7 @@
                         ItemsSource="{Binding FavoriteList}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <StackLayout>
+                        <StackLayout Style="{StaticResource DataRowEnter}">
                             <OnPlatform x:TypeArguments="View">
                                 <On Platform="WinUI, macOS">
                                     <Grid
